------------------------------------------------------------------------
r2219 | gaser | 2023-07-17 11:13:51

Changed paths:
 M CHANGES.txt
 M Contents.m
 M cat_io_data2mat.m
 M cat_plot_boxplot.m
 M cat_surf_vol2surf.m
 M doc/cat.html

Changed: Some smaller edits in help text.
Fixed:   Corrected missing switch/case field in cat_surf_vol2surf.m.
 ------------------------------------------------------------------------
r2218 | rdahnke | 2023-07-10 17:49:53

Changed paths:
 M CHANGES.txt
 M cat_conf_tools.m
 M cat_io_cmd.m
 M cat_io_xml2csv.m
 M cat_main1639.m
 M cat_main_registration.m
 M cat_main_updateSPM1639.m
 M cat_parallelize.m
 M cat_surf_createCS3.m
 M cat_vol_mimcalc.m
 M cat_vol_partvol.m
 M cat_vol_qa2.m
 M cat_vol_set_com.m

1) Fixed:      Corrected setup of QC batch in cat_conf_tools and cat_vol_qa2.    
2) Fixed:      Tiny corrections/modifications in cat_io_cmd, cat_io_colormaps, 
               cat_main_updateSPM1639, cat_surf_createCS3, cat_vol_mimcalc.
3) Changed:    Modified ROI name limitation in cat_io_xml2csv.   
4) Changed:    Prepared new final affine registration after initial/final 
               segmentation in cat_main1639 and cat_main_registration.                 
5) Changed:    Shortened waiting times for PID in cat_parallelize.
4) Fixed:      Corrected matrix size bug of the brain mask in cat_vol_partvol. 
5) Changed:    Replaced mean by median threshold in cat_vol_set_com. 
------------------------------------------------------------------------
r2217 | rdahnke | 2023-06-21 17:13:14

Changed paths:
 M CHANGES.txt
 M cat_io_xml2csv.m

1) Fixed:    Added filename field and correct export directory bug in the 
             XML2CSV batch cat_io_xml2csv.
------------------------------------------------------------------------
r2216 | rdahnke | 2023-06-19 22:33:04

Changed paths:
 M CHANGES.txt
 M cat_conf_extopts.m
 M cat_surf_createCS3.m
 M cat_vol_pbt.m

Fixed:     Added suggestions from Torben Lund for expert surface outputs in